recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:6: error: illegal start of simple pattern
  var double x = 100;
               ^FourSquare:6: error: '=' expected but ';' found.
  var double x = 100;
                    ^